
Revision 4.4.6, released 2018-08-XX
-----------------------------------

- Improved package build and dependency tracking
- Fixed missing LICENSE from the tarball distribution
- Fixed `CommandGeneratorLcdConfigurator.unconfigure()` to fully clean up
  internal caches, otherwise repetitive attempts to configure the target
  would fail.

Revision 4.4.5, released 2018-08-05
-----------------------------------

- Added PySnmpError.cause attribute holding parent exception tuple
- Fixed broken InetAddressType rendering caused by a pyasn1 regression
- Fixed typo in RFC1158 module
- Fixed possible infinite loop in GETBULK response PDU builder
- Fixed memory leak in the `config.delContext()` VACM management harness
- Fixed `Bits` class initialization when enumeration values are given
- Fixed crash caused by incoming SNMPv3 message requesting SNMPv1/v2c
  security model
- Fixed out-of-scope OIDs leaking at the end of SNMP table at hlapi
  `nextCmd` and `bulkCmd` calls when `lexicographicMode = False`

Revision 4.4.4, released 2018-01-03
-----------------------------------

- Copyright notice extended to the year 2018
- Fixed short local key expansion at 3DES key localization
  implementation.

Revision 4.4.3, released 2017-12-22
-----------------------------------

- Migrated references from SourceForge
- Added missing SHA2 support for Blumenthal key localization
- Fixed named bits handling at rfc1902.Bits
- Fixed missing SmiError exception class at pysnmp.proto.rfc1155
- Fixed SNMP v1->v2c PDU proxy -- error-status & error-index fields
  from v1 PDU get copied over to v2c PDU in addition to the exception
  sentinels being set

Revision 4.4.2, released 2017-11-11
-----------------------------------

- The pysnmp version being used gets exposed to the MIB modules
  via the `MibBuilder` instance
- The .setObjects() method of the SMI types now accepts
  `append=False` parameter to let the caller adding more
  than 255 elements over the course of multiple calls